# goa-cli

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md
scripts/: install.ps1  install.sh  macuser.sh
src/: main.rs  version.rs
src/commands/: mod.rs
src/commands/component/: mod.rs
src/commands/project/: mod.rs
src/commands/route/: mod.rs
src/config/: mod.rs
src/errors/: mod.rs
src/templates/: mod.rs
src/utils/: mod.rs
